#    Copyright (c) 2013 Mirantis, Inc.
#
#    Licensed under the Apache License, Version 2.0 (the "License"); you may
#    not use this file except in compliance with the License. You may obtain
#    a copy of the License at
#
#         http://www.apache.org/licenses/LICENSE-2.0
#
#    Unless required by applicable law or agreed to in writing, software
#    distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
#    WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
#    License for the specific language governing permissions and limitations
#    under the License.


[metadata]
name = imagination
version = 0.0.1
summary = Imagination API
description-file = README.rst
license = Apache License, Version 2.0
author = v0rt3x
author-email = dev@v0rt3x.ru
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python

[files]
packages = imagination

[global]
setup-hooks = pbr.hooks.setup_hook

[entry_points]
console_scripts =
    imagination-api = imagination.cmd.api:main
    imagination-engine = imagination.cmd.engine:main
    imagination-db-manage = imagination.cmd.db_manage:main
oslo.config.opts =
    imagination = imagination.opts:list_opts

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0